CCD-1596 Integrate Fortify Scan into Nightly Pipelines - Message Publisher